--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "prettier": "^2.7.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
+  },
+  "dependencies": {
+    "liquidjs": "^9.37.0"
   }
 }
